syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "google/protobuf/wrappers.proto";

import "model.proto";

message PullFrameFromFlowSetRequest {
	message Config {
		OpFlowSet flow_set = 1;
		google.protobuf.BoolValue config_ack = 2;
	}

	google.protobuf.StringValue id = 1;
	oneof request {
		Config config = 2;
	}
}

message PullFrameFromFlowSetResponse {
	message Ack {}
	message Pack {
		Device device = 1;
		repeated Frame frames = 2;
	}

	string id = 1;
	oneof response {
		Ack ack = 2;
		Pack pack = 3;
	}
}
